# honeypots

./: README.md  pyproject.toml
honeypots/: __init__.py  __main__.py  base_server.py  dhcp_server.py  dicom_server.py  helper.py  hl7_server.py  ssh_server.py
tests/: conftest.py  test_dicom_server.py  test_hl7_server.py  test_http_proxy_server.py  test_ssh_server.py  test_vnc_server.py  utils.py
tests/acceptance/: test_db.py  test_full_run.py
tests/data/: vnc_connector.py
